# sidecar

./: .dockerignore  Dockerfile  Dockerfile-alpine  README.md  index.js  package-lock.json  package.json
.github/workflows/: integration.yml  release.yml
examples/: index.js
examples/full/: README.md  docker-compose.yml  index.js  wrk-post.lua
examples/full/ballerina/: Ballerina.toml  Dockerfile
examples/full/ballerina/src/server/: main.bal
examples/full/crystal-kemal/: .gitignore  Dockerfile  server.cr  shard.yml
examples/full/deno-oak/: Dockerfile  deps.ts  server.ts
examples/full/go-fiber/: Dockerfile  go.mod  server.go
examples/full/php-mark/: Dockerfile  server.php
examples/full/php-nano/: composer.json  server.php
examples/full/python-flask/: Dockerfile  server.py
examples/full/ruby-sinatra/: Dockerfile  Gemfile  server.rb
examples/full/rust-actix/: Cargo.toml  Dockerfile
examples/full/rust-actix/src/: main.rs
examples/full/swift-perfect/: Dockerfile  Package.swift
examples/full/swift-perfect/Sources/server/: main.swift
examples/full/v/: .gitignore  Dockerfile  demo-valval.v  demo-vex.v  server.mod  server.v  vv.v  vweb_example.v
src/: index.js
test/integration/: index.spec.js  moleculer.config.sidecar.js  utils.js
test/integration/services/: ex-alpha.js  ex-beta.js  greeter.service.js
