[package]
name = "rust-actix"
version = "0.1.0"
authors = ["Icebob <mereg.norbert@gmail.com>"]
edition = "2018"

[[bin]]
name = "rust-actix"
path = "src/main.rs"

[dependencies]
actix-web = "3"
serde = "1.0.118"
serde_json = "1.0.59"
reqwest = { version = "0.10", features = ["json"] }
url = "2.2.0"
